<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black"
        android:title="@string/delete_file_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_revert_select"
        android:title="@string/reverse_select_label" />
    <item
        android:id="@+id/action_cut"
        android:title="@string/file_cut_label" />
    <item
        android:id="@+id/action_copy"
        android:title="@string/file_copy_label" />
    <item
        android:id="@+id/action_paste"
        android:icon="@drawable/ic_content_paste_black"
        android:title="@string/file_paste_label"
        android:visible="false" />
</menu>