<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/menu_search_label"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/sort"
        android:title="@string/menu_sort_label" />
    <item
        android:id="@+id/unknown_file"
        android:checkable="true"
        android:checked="false"
        android:title="@string/unknown_file_label" />
    <item
        android:id="@+id/global_search"
        android:checkable="true"
        android:checked="false"
        android:title="@string/global_search_label" />

    <item
        android:id="@+id/recursive_search"
        android:checkable="true"
        android:checked="false"
        android:title="@string/recursive_search_label" />
</menu>